Change your habit section added

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 body{
     font-family: Inter, sans-serif;
+    background-color: rgb(0, 0, 0);
 }
 *{
     margin: 0;
@@ -186,13 +187,11 @@ margin-top: 3px;
     display: none;
 }
 /* Responsivle  */
-@media screen and (max-width: 600px){
-    /* body {
-        overflow-x: hidden;
-    } */
-    * {
+@media screen and (max-width: 576px){
+   
+    /* * {
         border: 1px solid red;
-    }
+    } */
     .container{
         width: 90%;
         margin: 0rem auto;
@@ -263,4 +262,58 @@ margin-top: 3px;
         letter-spacing: 0px;
     }
 
+}
+/* your habit section */
+.your-habits-section{
+    text-align: center;
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 110px;
+    
+}
+.habit-title{
+    font-size: 3rem;
+    color: white;
+}
+.habit-description{
+    font-size: 0.875rem;
+    color: rgba(255, 255, 255, 0.5);
+    margin-top: 14px;
+    margin-bottom: 48px;
+}
+.habit-grides{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+.grid-one img{
+    border-radius: 50%; 
+    border: 4px solid rgb(89, 87, 87);
+}
+.grid-one h4{
+    font-size: 1.125rem;
+    margin-top: 30px;
+    color: white;
+}
+.grid-one p{
+    font-size: 0.875rem;
+    margin-top: 6px;
+    color: rgba(255, 255, 255, 0.5);
+}
+
+/* your habit responsive*/
+
+@media screen and (max-width: 576px){
+    .habit-grides{
+        display: flex;
+        flex-direction: column;
+    }
+    .grid-one {
+        margin: 13px auto;
+    }
+    .habit-title{
+        font-size: 2rem; 
+    }
+    
 }
