--- a/style.css
+++ b/style.css
@@ -188,6 +188,7 @@ margin-top: 3px;
 .three-dot{
     display: none;
 }
+
 /* Responsivle  */
 @media screen and (max-width: 576px){
    
@@ -240,12 +241,12 @@ margin-top: 3px;
         width: 83px;
     }
     #badge-one{
-        margin-left: 190px;
-        margin-top: -530px;
+        margin-left: 160px;
+        margin-top: -430px;
     }
     #badge-two{
         margin-left: 30px;
-        margin-top: -320px;
+        margin-top: -280px;
         width: 110px;
     }
     #ex-year-one{
@@ -265,6 +266,7 @@ margin-top: 3px;
     }
 
 }
+
 /* your habit section */
 .your-habits-section{
     text-align: center;
@@ -372,6 +374,9 @@ border-radius: 18px;
     }
     .run-extra-des{
         margin-bottom: 24px;
+    }
+    .run-extra-right img{
+        width: 100%;
     }
     
 }
