--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ margin-top: 28px;
     color: rgba(255, 255, 255, 0.65);
     letter-spacing: 2px;
 }
-.banner-right img{
+.banner-img{
     position: relative;
     width: 100%;
     height: 100%;
@@ -153,9 +153,8 @@ margin-top: 28px;
 #badge-one{
     padding: 12px 20px;
     font-weight: 500;
-    left: 82%;
-    top:36%;
-    
+    margin-left: 227px;
+    margin-top: -450px;
     position: absolute;
     line-height: 1;
     
@@ -164,11 +163,8 @@ margin-top: 28px;
     display: flex;
     padding: 18px 22px 10px;
     font-weight: 500;
-    /* margin-left: -90px;
-    margin-top: -170px; */
-    left: 60%;
-    top:77%;
-    
+    margin-left: -90px;
+    margin-top: -170px;
     position: absolute;
     line-height: 1;  
 }
@@ -246,12 +242,12 @@ margin-top: 3px;
         width: 83px;
     }
     #badge-one{
-       left: 45%;
-       top: 60%;
+        margin-left: 160px;
+        margin-top: -430px;
     }
     #badge-two{
-        left: 7%;
-        top: 78%;
+        margin-left: 30px;
+        margin-top: -280px;
         width: 110px;
     }
     #ex-year-one{
